# gdelt-cloud-mcp

./: .env.example  IMPLEMENTATION_NOTES.md  INTEGRATION_GUIDE.md  README.md  pyproject.toml  server.py  test_auth.py
cameo/: __init__.py  actor_types.py  country_codes.py  ethnic_codes.py  event_codes.py  known_groups.py  religion_codes.py
cameo/data/: cameo_ethnic.txt
resources/: __init__.py  gkg_themes.py  goldstein_scale.py  query_patterns.py
utils/: __init__.py  api_client.py  auth.py  dual_token_verifier.py
