[project]
name = "gdelt-cloud-mcp"
version = "1.0.0"
description = "GDELT Cloud MCP Server - Access GDELT event data with OAuth and API key authentication"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "GDELT Cloud", email = "support@gdeltcloud.com" }
]
license = { text = "MIT" }
keywords = ["gdelt", "mcp", "events", "news", "data", "clickhouse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://gdeltcloud.com"
Documentation = "https://docs.gdeltcloud.com"
Repository = "https://github.com/your-org/gdelt-cloud-mcp"
Issues = "https://github.com/your-org/gdelt-cloud-mcp/issues"

[project.scripts]
gdelt-cloud-mcp = "server:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cameo", "resources", "utils"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
